# AgentPin

./: .gitignore  .schemapin.sig  AGENTPIN_TECHNICAL_SPECIFICATION.md  Cargo.toml  README.md  ROADMAP.md  SKILL.md  SKILLS.md  context7.json  zensical.toml
.github/workflows/: docs.yml  javascript.yml  python.yml  release.yml  rust.yml
crates/agentpin/: Cargo.toml
crates/agentpin-cli/: Cargo.toml
crates/agentpin-cli/src/: bundle.rs  issue.rs  keygen.rs  main.rs  verify.rs
crates/agentpin-server/: Cargo.toml
crates/agentpin-server/src/: config.rs  main.rs  middleware.rs  routes.rs  state.rs
crates/agentpin/src/: credential.rs  crypto.rs  delegation.rs  discovery.rs  error.rs  jwk.rs  jwt.rs  lib.rs  mutual.rs  nonce.rs  pinning.rs  resolver.rs  revocation.rs  rotation.rs  verification.rs
crates/agentpin/src/transport/: grpc.rs  http.rs  mcp.rs  mod.rs  websocket.rs
crates/agentpin/src/types/: bundle.rs  capability.rs  constraint.rs  credential.rs  discovery.rs  mod.rs  mutual.rs  pinning.rs  revocation.rs
crates/agentpin/tests/: integration.rs
docs/: cli-guide.md  delegation-chains.md  deployment.md  getting-started.md  index.md  security.md  troubleshooting.md  trust-bundles.md  verification-flow.md
examples/: axum_middleware.rs  express_middleware.js  fastapi_middleware.py
javascript/: README.md  package.json
javascript/src/: bundle.js  capability.js  constraint.js  credential.js  crypto.js  delegation.js  discovery.js  index.js  jwk.js  jwt.js  mutual.js  nonce.js  pinning.js  revocation.js  rotation.js  transport.js  types.js  verification.js
javascript/tests/: bundle.test.js  capability.test.js  constraint.test.js  credential.test.js  crypto.test.js  delegation.test.js  discovery.test.js  integration.test.js  jwk.test.js  jwt.test.js  mutual.test.js  nonce.test.js  pinning.test.js  revocation.test.js  rotation.test.js  transport.test.js  verification.test.js
python/: README.md  pyproject.toml  setup.cfg
python/agentpin/: __init__.py  bundle.py  capability.py  constraint.py  credential.py  crypto.py  delegation.py  discovery.py  jwk.py  jwt.py  mutual.py  nonce.py  pinning.py  revocation.py  rotation.py  transport.py  types.py  verification.py
python/tests/: test_bundle.py  test_capability.py  test_constraint.py  test_credential.py  test_crypto.py  test_delegation.py  test_discovery.py  test_integration.py  test_jwk.py  test_jwt.py  test_mutual.py  test_nonce.py  test_pinning.py  test_revocation.py  test_rotation.py  test_transport.py  test_verification.py
