[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentpin"
version = "0.1.1"
description = "Domain-anchored cryptographic identity protocol for AI agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "ThirdKey", email = "contact@thirdkey.ai"},
]
maintainers = [
    {name = "Jascha Wanger", email = "jascha@thirdkey.ai"},
]
keywords = [
    "cryptography",
    "ecdsa",
    "ai-agents",
    "identity",
    "security",
    "digital-signatures",
    "jwt",
    "agentpin",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
]

dependencies = [
    "cryptography>=41.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "bandit>=1.7.0",
    "mypy>=1.0",
    "black>=23.0",
]

[project.urls]
Homepage = "https://agentpin.org"
Repository = "https://github.com/thirdkeyai/agentpin"
Issues = "https://github.com/thirdkeyai/agentpin/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["agentpin*"]

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.black]
line-length = 120
target-version = ["py38"]
